--- a/YouTube.css
+++ b/YouTube.css
@@ -3,11 +3,11 @@
 #savefrom__yt_notification,
 /* Shorts */
 ytd-guide-section-renderer.style-scope:nth-child(1) > div:nth-child(2) > ytd-guide-entry-renderer:nth-child(2),
-/* Library */
-#header > .ytd-guide-collapsible-section-entry-renderer.style-scope,
 /* List of subscriptions */
-ytd-guide-section-renderer.ytd-guide-renderer.style-scope:nth-of-type(2),
+ytd-guide-section-renderer.style-scope:nth-child(2) > div:nth-child(2) > ytd-guide-entry-renderer,
+ytd-guide-collapsible-entry-renderer.style-scope:nth-child(9),
 /* More from youtube */
+ytd-guide-section-renderer.style-scope:nth-child(3) > div:nth-child(2) > ytd-guide-collapsible-section-entry-renderer:nth-child(1) > div:nth-child(1),
 ytd-guide-section-renderer.style-scope:nth-child(4),
 ytd-guide-section-renderer.style-scope:nth-child(5) > h3,
 ytd-guide-section-renderer.style-scope:nth-child(5) > div:nth-child(2) > ytd-guide-entry-renderer:nth-child(1),
